--- a/src/components/footer/footer.responsive.scss
+++ b/src/components/footer/footer.responsive.scss
@@ -1,3 +1,10 @@
+@media (max-width: 960px) {
+  .footer-container {
+    width: 99%;
+    padding: 0px;
+  }
+}
+
 @media (max-width: 640px) {
   .footer-container {
     width: 600px;
